src/app/home/css/main.module.css
  .divContainer{
    background-image: url('/assets/images/earth-bg.png') ;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 100dvh;
    width: 100vw;
    display: flex;
    justify-content: center;
    position: relative;
    /* z-index: 0; */
    overflow-y: hidden;
  }
  .canvasContainer{
    position: absolute !important;
    top: 0 !important;
    left: 0 !important;
    right: 0 !important;
    bottom: 0 !important;
    width: 100% !important;
    height: 100vh !important;
    overflow: hidden !important;
    pointer-events: auto !important;
  }

  .overlayDescription{
    position: fixed;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}
.EarthHeading {
    position: absolute;
    bottom: 8%;
    text-align: center;
    transition: all 1s;
}
.EarthHeadingInnerTop{
  bottom: 60%;
}
.EarthHeadingInner{
  position: relative;
  display: flex;
    color: #fff;
    font-family: "Inter Tight";
    font-size: 16vw;
    font-style: normal;
    font-weight: 400;
    line-height: 95%; 
    text-transform: uppercase;
    width: 100%; 
    transition: all 0.1s ease;
}
.EarthHeadingInner.EarthText{
  color: #fff;
}
.EarthHeadingInner.MoonText{
  color: #424242;
}
.EarthHeadingInner.MarsText{
  color: #C8402D;
}


.OrbitImage{
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  height: 100vh;
  width: 100%;
  object-fit: contain;
  top: 0;
  transition: transform 2s; /* Smooth transition over 5 seconds */
  /* animation: rotateAnimation infinite 25s linear; Rotate infinitely with a 5-second duration */
}
.overlayDiv{
  top:0;
  position: fixed;
  height: 100vh;
  overflow-y: hidden;
  width: 100vw;
  z-index: 2;
}
.overlayDiv::-webkit-scrollbar{
  display: none;
}
.overlayDiv > div {
  position: relative;
  height: 100vh;
}
.EarthImage{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    height: auto;
    width: 530px;
    object-fit: contain;
    position: relative;
}
.EarthDescription{
    color: #fff;
    position: absolute;
    display: flex;
    gap: 6px;
    flex-direction: column;
    max-width: 499px;
    width: 100%;
    position: absolute;
    top: 45%;
    right: 15%;
}   
.EarthDescription > div:last-child{
    opacity: 0.5;
}
.EarthImageLabel {
    color: #fff;
    display: flex;
    flex-direction: column;
    position: absolute;
    left: 15%;
    width: 30%;
    bottom: 50%;
    text-transform: uppercase;
}
.EarthImageLabelSpan:first-child{
  font-family: "JetBrains Mono";
font-size: 15px;
font-style: normal;
font-weight: 400;
line-height: normal;
text-transform: uppercase;
}
.EarthImageLabelSpan:last-child{
  font-family: "JetBrains Mono";
font-size: 12px;
font-style: normal;
font-weight: 400;
line-height: normal;
text-transform: uppercase;
}
.EarthImageLabelSpan:last-child{
    opacity: 0.5;
}

.addLineText {
    position: absolute;
    width: 80%; 
    height: 1px; 
    background-color: #fff;
    top: 30px;
    right: -30px;
    transform: translateX(-0%);
    transition: width 2s; /* Add a transition for smooth width changes */
}
.addLineText.addLineTextAnimation {
  animation: expandAnimation 2s forwards; /* Trigger the animation */
}

.EarthImageLabelSpan {
    margin: 0; 
}
.MoonImageContainer{
  color: #fff;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 0.2rem;
  position: absolute;
  right: 11%;
  top: 15%;
  text-align: left;
  text-transform: uppercase;

}
.MoonImageLabel{
  display: flex;
  flex-direction: row;
  /* gap: 4px; */
  font-family: "JetBrains Mono";
font-size: 15px;
font-style: normal;
font-weight: 400;
line-height: normal;
text-transform: uppercase;
}
.MoonImageContainer .MoonImageLabel:last-child{
  opacity: 0.5;
  font-family: "JetBrains Mono";
font-size: 12px;
font-style: normal;
font-weight: 400;
line-height: normal;
text-transform: uppercase;
}
.textSpan{
  transition: all 0.3s;
}

@keyframes rotateAnimation {
  from {
      transform: rotate(0deg);
  }
  to {
      transform: rotate(360deg);
  }
}

@keyframes expandAnimation {
  from {
      width: 0%;
  }
  to {
      width: 80%;
  }
}

@media screen and (max-device-width:780px) {
  .divContainer{
    display: none;
  }

}

